load("//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")
load("//common_drivers:modules.bzl", "AMLOGIC_DDK_MODULES")
load("//common_drivers:amlogic_utils.bzl", "m_k_files")

m_k_files()

amlogic_input_deps0 = [
    "//common_drivers/drivers/gki_tool:amlogic-gkitool",
    "//common_drivers/drivers/debug:amlogic-debug-iotrace",
    "//common_drivers/drivers/debug:amlogic-debug",
    "//common_drivers/drivers/power:amlogic-power",
    "//common_drivers/drivers/gpio:amlogic-gpio",
    "//common_drivers/drivers/pm:amlogic-pm",
]
amlogic_input_deps = [i for i in amlogic_input_deps0 if i in AMLOGIC_DDK_MODULES]
ddk_module(
    name = "amlogic-input",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_INPUT": {
            True: ["main.c"],
        },
        "CONFIG_AMLOGIC_MESON_IR": {
            True: [
                "ir/meson_ir_core.c",
                "ir/meson_ir_main.c",
                "ir/meson_ir_sysfs.c",
                "ir/meson_ir_cdev.c",
                "ir/meson_ir_raw.c",
                "ir/meson_ir_regmap.c",
                "ir/meson_ir_decoder_xmp.c",
                "ir/meson_ir_common_input.c",
            ],
        },
        "CONFIG_AMLOGIC_GPIO_KEY": {
            True: ["keyboard/gpio_keypad.c"],
        },
        "CONFIG_AMLOGIC_ADC_KEYPADS": {
            True: ["keyboard/adc_keypad.c"],
        },
        "CONFIG_AMLOGIC_CKS05_TOUCH_KEYPADS": {
            True: ["keyboard/csk05_ts_5button.c"],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[input]: \" fmt"],
    out = "amlogic-input.ko",
    kernel_build = "//common_drivers:amlogic",
    visibility = ["//visibility:public"],
    deps = amlogic_input_deps,
)
