load("//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")
load("//common_drivers:modules.bzl", "AMLOGIC_DDK_MODULES")
load("//common_drivers:amlogic_utils.bzl", "m_k_files")

m_k_files()

amlogic_irblaster_deps0 = [
]
amlogic_irblaster_deps = [i for i in amlogic_irblaster_deps0 if i in AMLOGIC_DDK_MODULES]
ddk_module(
    name = "amlogic-irblaster",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_IRBLASTER": {
            True: [
                "core.c",
                "sysfs.c",
                "irblaster-meson.c",
            ],
        },
    },
    hdrs = [
        "//common_drivers:soc_headers",
    ],
    local_defines = ["pr_fmt(fmt)=\"[amlogic-irblaster]: \" fmt"],
    out = "amlogic-irblaster.ko",
    kernel_build = "//common_drivers:amlogic",
    visibility = ["//visibility:public"],
    deps = amlogic_irblaster_deps,
)
