load("//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")
load("//common_drivers:amlogic_utils.bzl", "m_k_files", "kernel_select")

m_k_files()

ddk_module(
    name = "amlogic-irblaster",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_IRBLASTER": {
            True: [
                "core.c",
                "sysfs.c",
                "irblaster-meson.c",
            ],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[amlogic-irblaster]: \" fmt"],
    out = "amlogic-irblaster.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = [
    ],
)
