load("@kleaf//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")

ddk_module(
    name = "amlogic-led",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_LED": {
            True: [
                "main.c",
            ],
        },
        "CONFIG_AMLOGIC_LEDS_TLC59116": {
            True: [
                "leds-tlc59116.c",
            ],
        },
        "CONFIG_AMLOGIC_LEDS_AW9523B": {
            True: [
                "leds-aw9523b.c",
            ],
        },
        "CONFIG_AMLOGIC_LEDS_STATE": {
            True: [
                "leds_state.c",
            ],
        },
        "CONFIG_AMLOGIC_LEDS_DCON": {
            True: [
                "meson_led_unipolar_ctrl.c",
            ],
        },
        "CONFIG_AMLOGIC_LEDS_FD650": {
            True: [
                "fd650.c",
            ],
        },
        "CONFIG_AMLOGIC_LEDS_PCA9557": {
            True: [
                "aml-pca9557.c",
            ],
        },
    },
    hdrs = [
        "//common_drivers:soc_headers",
    ],

    local_defines = [
        "pr_fmt(fmt)=\"[led]: \" fmt",
    ],
    out = "amlogic-led.ko",
    kernel_build = "//common_drivers:amlogic",
    visibility = ["//visibility:public"],
    deps = [
        "//common_drivers/drivers/gki_tool:amlogic-gkitool",
    ],
)
