load("@kleaf//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")
load("//common_drivers:modules.bzl", "AMLOGIC_DDK_MODULES")

amlogic_mailbox_deps0 = [
]
amlogic_mailbox_deps = [i for i in amlogic_mailbox_deps0 if i in AMLOGIC_DDK_MODULES]
ddk_module(
    name = "amlogic-mailbox",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_MHU_MBOX": {
            True: [
                "meson_mbox_main.c",
                "meson_mbox_fifo.c",
                "meson_mbox_pl_v0.c",
                "meson_mbox_pl_v1.c",
                "meson_mbox_pl_v2.c",
                "meson_mbox_devfs.c",
                "meson_mbox_sec.c",
            ],
        },
    },
    hdrs = [
        "//common_drivers:soc_headers",
    ],
    local_defines = ["pr_fmt(fmt)=\"[mailbox]: \" fmt"],
    out = "amlogic-mailbox.ko",
    kernel_build = "//common_drivers:amlogic",
    visibility = ["//visibility:public"],
)
