load("//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")
load("//common_drivers:amlogic_utils.bzl", "m_k_files", "kernel_select")

m_k_files()

ddk_module(
    name = "amlogic-mailbox",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_MHU_MBOX": {
            True: [
                "meson_mbox_main.c",
                "meson_mbox_fifo.c",
                "meson_mbox_pl_v0.c",
                "meson_mbox_pl_v1.c",
                "meson_mbox_pl_v2.c",
                "meson_mbox_devfs.c",
                "meson_mbox_sec.c",
            ],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[mailbox]: \" fmt"],
    out = "amlogic-mailbox.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = [
    ],
)
